samples/_failures_safe/1761265516_003559_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14d96a78.c: In function ‘main’:
./samples/SAFE/__tmp_14d96a78.c:163:13: error: expected declaration or statement at end of input
  163 |             printf("Decompression failed for method %s\n", method_names[i]);
      |             ^~~~~~
./samples/SAFE/__tmp_14d96a78.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_14d96a78.c:163:13: error: expected declaration or statement at end of input
